crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__tc010_precedence_over_tch008.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
<filename>:6:16: TCH008 [*] Remove quotes from type alias
  |
4 | from typing import TYPE_CHECKING, TypeAlias
5 | 
6 | a: TypeAlias = 'int | None'  # TCH008
  |                ^^^^^^^^^^^^ TCH008
7 | b: TypeAlias = 'int' | None  # TCH010
  |
  = help: Remove quotes

ℹ Safe fix
3 3 | 
4 4 | from typing import TYPE_CHECKING, TypeAlias
5 5 | 
6   |-a: TypeAlias = 'int | None'  # TCH008
  6 |+a: TypeAlias = int | None  # TCH008
7 7 | b: TypeAlias = 'int' | None  # TCH010

<filename>:7:16: TCH010 Invalid string member in `X | Y`-style union type
  |
6 | a: TypeAlias = 'int | None'  # TCH008
7 | b: TypeAlias = 'int' | None  # TCH010
  |                ^^^^^ TCH010
  |
