crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__type-checking-block-before-imports_TC009.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
assertion_line: 65
---
TC009 `if TYPE_CHECKING:` block should be after all top-level imports
  --> TC009.py:7:1
   |
 5 |   from typing import TYPE_CHECKING
 6 |
 7 | / if TYPE_CHECKING:  # TC009
 8 | |     from collections.abc import Sequence
   | |________________________________________^
 9 |
10 |   from mylib import MyClass
   |
