crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__type_checking_block_comment.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `pandas` into a type-checking block
 --> <filename>:6:18
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import pandas as pd
  |                  ^^
7 |
8 | if TYPE_CHECKING:
  |
help: Move into type-checking block
   |
 4 ~ from typing import TYPE_CHECKING
 5 |
 6 + 
 7 |
 8 | if TYPE_CHECKING:
 9 |     # This is a comment.
10 +     import pandas as pd
   |
note: This is an unsafe fix and may change runtime behavior
