crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__type_checking_block_inline.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Make third-party import `pandas` lazy
 --> <filename>:6:18
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import pandas as pd
  |                  ^^
7 |
8 | if TYPE_CHECKING: import os
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
5 |
  - import pandas as pd
6 + lazy import pandas as pd
7 |
  |
note: This is an unsafe fix and may change runtime behavior
