crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-first-party-import_TC001.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC001 [*] Move application import `.TYP001` into a type-checking block
  --> TC001.py:20:19
   |
19 | def f():
20 |     from . import TYP001
   |                   ^^^^^^
21 |
22 |     x: TYP001
   |
help: Move into type-checking block
   |
 5 + from typing import TYPE_CHECKING
 6 ~ 
 7 + if TYPE_CHECKING:
 8 +     from . import TYP001
 9 + 
   |
note: This is an unsafe fix and may change runtime behavior
